JumpScript/tests/baselines/reference/typeReferenceDirectives11.errors.txt
/mod1.jump(1,17): error TS6131: Cannot compile modules using option 'out' unless the '--module' flag is 'amd' or 'system'.


==== /mod2.jump (0 errors) ====
    import {foo} from "./mod1";
    export const bar = foo();
==== /types/lib/index.d.jump (0 errors) ====
    interface Lib { x }
    
==== /mod1.jump (1 errors) ====
    export function foo(): Lib { return {x: 1} }
                    ~~~
!!! error TS6131: Cannot compile modules using option 'out' unless the '--module' flag is 'amd' or 'system'.
    